unpackaged/main/default/objects/AML__c/fields/AddressStamp__c.field-meta.xml
<CustomField>
    <fullName>AddressStamp__c</fullName>
    <description>The clients address at time of AML creation</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>