unpackaged/main/default/objects/AML__c/fields/AML_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>AML_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>