unpackaged/main/default/objects/AML__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT( Person_Account__r.Country_of_Residence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Residence</label>
    <type>Text</type>
</CustomField>