unpackaged/main/default/objects/AML__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <description>The HTAR level associated with the clients country of residence</description>
    <label>Country of Residence - HTAR Risk Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>