unpackaged/main/default/objects/AML__c/fields/CountryOfResidenceStamp__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidenceStamp__c</fullName>
    <description>The clients country of residence at time of AML creation</description>
    <label>Country of residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>