unpackaged/main/default/objects/AML__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>Person_Account__r.FinServ__PrimaryContact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>