unpackaged/main/default/objects/AML__c/fields/DateOfBirthStamp__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthStamp__c</fullName>
    <description>The clients date of birth as recorded at time of AML creation</description>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>