unpackaged/main/default/objects/AML__c/fields/Dual_nationality__c.field-meta.xml
<CustomField>
    <fullName>Dual_nationality__c</fullName>
    <formula>TEXT(Person_Account__r.Dual_Nationality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Nationality</label>
    <type>Text</type>
</CustomField>