unpackaged/main/default/objects/AML__c/fields/Dual_Nationality_HTAR_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Dual_Nationality_HTAR_Risk_Level__c</fullName>
    <description>The HTAR level associated with the clients second nationality</description>
    <label>Dual Nationality - HTAR Risk Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>