unpackaged/main/default/objects/AML__c/fields/Experian_Completed__c.field-meta.xml
<CustomField>
    <fullName>Experian_Completed__c</fullName>
    <description>Superseded - replaced by the TransUnion history in the AML overhaul 2024</description>
    <label>Experian completed date</label>
    <type>Date</type>
</CustomField>