unpackaged/main/default/objects/AML__c/fields/Experian_Notes__c.field-meta.xml
<CustomField>
    <fullName>Experian_Notes__c</fullName>
    <description>Any notes on the process of performing and approving the Experian check</description>
    <label>Experian Notes</label>
    <type>TextArea</type>
</CustomField>