unpackaged/main/default/objects/AML__c/fields/Final_WC1_report_saved_to_files__c.field-meta.xml
<CustomField>
    <fullName>Final_WC1_report_saved_to_files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Superseded - Replaced by a more simple process in the AML overhaul of 2024.
Tick this box when the final WC1 report has been saved to the G-Drive</description>
    <label>Final WC1 Report Saved to Files (Legacy)</label>
    <type>Checkbox</type>
</CustomField>