unpackaged/main/default/objects/AML__c/fields/Flags__c.field-meta.xml
<CustomField>
    <fullName>Flags__c</fullName>
    <description>Used to record flags that WC1 raised for the client</description>
    <label>Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adverse media</fullName>
            </value>
            <value>
                <fullName>Criminal record</fullName>
            </value>
            <value>
                <fullName>Sanctions</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>