unpackaged/main/default/objects/AML__c/fields/IdentityCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>IdentityCheckStatus__c</fullName>
    <description>Records the final outcome of the TransUnion check</description>
    <label>TransUnion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pass following checks</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pending documentation</fullName>
                <label>Refer - pending documentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>