unpackaged/main/default/objects/AML__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <formula>TEXT(Person_Account__r.PersonContact.Nationality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>