unpackaged/main/default/objects/AML__c/fields/NationalityStamp__c.field-meta.xml
<CustomField>
    <fullName>NationalityStamp__c</fullName>
    <description>The clients nationality at time of AML creation</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>