unpackaged/main/default/objects/AML__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <label>PEP Checked (Legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>