unpackaged/main/default/objects/AML__c/fields/PEP_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>PEP_Risk_Rating__c</fullName>
    <description>Superseded - replaced by a simpler process in the AML overhaul 2024</description>
    <label>PEP Risk Rating (Legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>