unpackaged/main/default/objects/AML__c/fields/PepReason__c.field-meta.xml
<CustomField>
    <fullName>PepReason__c</fullName>
    <description>The reason this client has been marked as a PEP</description>
    <label>Reason for PEP</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>