unpackaged/main/default/objects/AML__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AML Checks (Person Account)</relationshipLabel>
    <relationshipName>AML_Checks1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>