unpackaged/main/default/objects/AML__c/fields/Proof_of_Adress_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Adress_Documents_Received__c</fullName>
    <description>The type of document received to prove clients address</description>
    <label>Proof of Address Documents Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Council tax bill</fullName>
            </value>
            <value>
                <fullName>Utility bill</fullName>
            </value>
            <value>
                <fullName>Bank account statement</fullName>
            </value>
            <value>
                <fullName>Credit card statement</fullName>
            </value>
            <value>
                <fullName>Photocard driving</fullName>
            </value>
            <value>
                <fullName>Old-school UK driving licence</fullName>
            </value>
            <value>
                <fullName>HMRC correspondence (including NI)</fullName>
            </value>
            <value>
                <fullName>Documents Rejected</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>