unpackaged/main/default/objects/AML__c/fields/Reason_for_PEP__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_PEP__c</fullName>
    <label>Reason for PEP (Legacy)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>