unpackaged/main/default/objects/AML__c/fields/Selfie_Requested__c.field-meta.xml
<CustomField>
    <fullName>Selfie_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Superseded - replaced by a simpler process in the AML overhaul of 2024</description>
    <inlineHelpText>Tick the box if a selfie from the client has been received.</inlineHelpText>
    <label>Selfie Received (Legacy)</label>
    <type>Checkbox</type>
</CustomField>