unpackaged/main/default/objects/AML__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The progress and outcome status of this AML check</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check required</fullName>
                <label>Check Required</label>
            </value>
            <value>
                <fullName>Escalated to MLRO</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Additional documentation</fullName>
                <isActive>false</isActive>
                <label>Additional Documentation Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>