unpackaged/main/default/objects/AML__c/fields/ThirdNationalityStamp__c.field-meta.xml
<CustomField>
    <fullName>ThirdNationalityStamp__c</fullName>
    <description>Clients third nationality at time of AML creation</description>
    <label>Third nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>