unpackaged/main/default/objects/AML__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Used to indicate which version of the AML process that this record is</description>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version 1 (before March 2024)</fullName>
            </value>
            <value>
                <fullName>Version 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>