unpackaged/main/default/objects/AML__c/fields/WC1__c.field-meta.xml
<CustomField>
    <fullName>WC1__c</fullName>
    <description>Used to indicate the final decision on the WC1 check</description>
    <label>WC1 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pass following review</fullName>
            </value>
            <value>
                <fullName>Pending review</fullName>
                <label>Escalated to experienced specialist</label>
            </value>
            <value>
                <fullName>MLRO approval required</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>