unpackaged/main/default/objects/AML__c/fields/WC1_Notes__c.field-meta.xml
<CustomField>
    <fullName>WC1_Notes__c</fullName>
    <description>Superseded - not needed in AML overhaul 2024</description>
    <label>WC1 Notes (Legacy)</label>
    <type>TextArea</type>
</CustomField>