unpackaged/main/default/objects/AML__c/validationRules/Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Completed&quot;), 
ISPICKVAL(PEP__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>PEP__c</errorDisplayField>
    <errorMessage>You need to run a PEP check</errorMessage>
</ValidationRule>