unpackaged/main/default/objects/AML__c/validationRules/Completed_PEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_PEP</fullName>
    <active>true</active>
    <description>You need to run a PEP check</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c,&quot;Completed&quot;),
PEP_Checkedf__c = FALSE
)</errorConditionFormula>
    <errorMessage>You need to run a PEP check</errorMessage>
</ValidationRule>