unpackaged/main/default/objects/AML__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Experian__c</columns>
    <columns>WC1__c</columns>
    <columns>Nationality_HTAR_MatrixRisk_Level__c</columns>
    <columns>Dual_Nationality_HTAR_Risk_Level__c</columns>
    <columns>Country_of_Residence__c</columns>
    <columns>Reason_for_PEP__c</columns>
    <columns>Reason_for_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>